src/app/navmenu/navmenu.component.css
.head-card {
    height: 34px;
    margin-top: -10px;
    padding: 16px;
    display: flex;
    cursor: pointer;
}

.active-link {
    background-color: #f5f5f5;
}

.profile-pic {
    width: 40px;
    height: 40px;
    margin-right: 10px;
    margin-top: -3px;
}

#ldap {
    color: #eee;
    font-size: 10pt;
}

@media (max-width: 560px) {
    .main-menu {
        margin-top: -10px;
        overflow-y: auto;
    }

    .head-card {
        margin-top: 0;
    }
}

